level_zero-sys/include/ze_api.h


typedef struct _ze_device_handle_t *ze_device_handle_t;
typedef enum _ze_result_t
{
    ZE_RESULT_SUCCESS = 0,                          
    ZE_RESULT_NOT_READY = 1,                        
    ZE_RESULT_ERROR_DEVICE_LOST = 0x70000001,       
    ZE_RESULT_ERROR_OUT_OF_HOST_MEMORY = 0x70000002,
    ZE_RESULT_ERROR_OUT_OF_DEVICE_MEMORY = 0x70000003,  
    ZE_RESULT_ERROR_MODULE_BUILD_FAILURE = 0x70000004,  
    ZE_RESULT_ERROR_MODULE_LINK_FAILURE = 0x70000005,   
    ZE_RESULT_ERROR_INSUFFICIENT_PERMISSIONS = 0x70010000,  
    ZE_RESULT_ERROR_NOT_AVAILABLE = 0x70010001,     
    ZE_RESULT_ERROR_DEPENDENCY_UNAVAILABLE = 0x70020000,
    ZE_RESULT_ERROR_UNINITIALIZED = 0x78000001,     
    ZE_RESULT_ERROR_UNSUPPORTED_VERSION = 0x78000002,   
    ZE_RESULT_ERROR_UNSUPPORTED_FEATURE = 0x78000003,   
    ZE_RESULT_ERROR_INVALID_ARGUMENT = 0x78000004,  
    ZE_RESULT_ERROR_INVALID_NULL_HANDLE = 0x78000005,   
    ZE_RESULT_ERROR_HANDLE_OBJECT_IN_USE = 0x78000006,  
    ZE_RESULT_ERROR_INVALID_NULL_POINTER = 0x78000007,  
    ZE_RESULT_ERROR_INVALID_SIZE = 0x78000008,      
    ZE_RESULT_ERROR_UNSUPPORTED_SIZE = 0x78000009,  
    ZE_RESULT_ERROR_UNSUPPORTED_ALIGNMENT = 0x7800000a, 
    ZE_RESULT_ERROR_INVALID_SYNCHRONIZATION_OBJECT = 0x7800000b,
    ZE_RESULT_ERROR_INVALID_ENUMERATION = 0x7800000c,   
    ZE_RESULT_ERROR_UNSUPPORTED_ENUMERATION = 0x7800000d,   
    ZE_RESULT_ERROR_UNSUPPORTED_IMAGE_FORMAT = 0x7800000e,  
    ZE_RESULT_ERROR_INVALID_NATIVE_BINARY = 0x7800000f, 
    ZE_RESULT_ERROR_INVALID_GLOBAL_NAME = 0x78000010,   
    ZE_RESULT_ERROR_INVALID_KERNEL_NAME = 0x78000011,   
    ZE_RESULT_ERROR_INVALID_FUNCTION_NAME = 0x78000012, 
    ZE_RESULT_ERROR_INVALID_GROUP_SIZE_DIMENSION = 0x78000013,  
    ZE_RESULT_ERROR_INVALID_GLOBAL_WIDTH_DIMENSION = 0x78000014,
    ZE_RESULT_ERROR_INVALID_KERNEL_ARGUMENT_INDEX = 0x78000015, 
    ZE_RESULT_ERROR_INVALID_KERNEL_ARGUMENT_SIZE = 0x78000016,  
    ZE_RESULT_ERROR_INVALID_KERNEL_ATTRIBUTE_VALUE = 0x78000017,
    ZE_RESULT_ERROR_INVALID_MODULE_UNLINKED = 0x78000018,   
    ZE_RESULT_ERROR_INVALID_COMMAND_LIST_TYPE = 0x78000019, 
    ZE_RESULT_ERROR_OVERLAPPING_REGIONS = 0x7800001a,   
    ZE_RESULT_ERROR_UNKNOWN = 0x7ffffffe,           
    ZE_RESULT_FORCE_UINT32 = 0x7fffffff
} ze_result_t;
typedef enum _ze_structure_type_t
{
    ZE_STRUCTURE_TYPE_DRIVER_PROPERTIES = 0x1,      
    ZE_STRUCTURE_TYPE_DRIVER_IPC_PROPERTIES = 0x2,  
    ZE_STRUCTURE_TYPE_DEVICE_PROPERTIES = 0x3,      
    ZE_STRUCTURE_TYPE_DEVICE_COMPUTE_PROPERTIES = 0x4,  
    ZE_STRUCTURE_TYPE_DEVICE_MODULE_PROPERTIES = 0x5,   
    ZE_STRUCTURE_TYPE_COMMAND_QUEUE_GROUP_PROPERTIES = 0x6, 
    ZE_STRUCTURE_TYPE_DEVICE_MEMORY_PROPERTIES = 0x7,   
    ZE_STRUCTURE_TYPE_DEVICE_MEMORY_ACCESS_PROPERTIES = 0x8,
    ZE_STRUCTURE_TYPE_DEVICE_CACHE_PROPERTIES = 0x9,
    ZE_STRUCTURE_TYPE_DEVICE_IMAGE_PROPERTIES = 0xa,
    ZE_STRUCTURE_TYPE_DEVICE_P2P_PROPERTIES = 0xb,  
    ZE_STRUCTURE_TYPE_DEVICE_EXTERNAL_MEMORY_PROPERTIES = 0xc,  
    ZE_STRUCTURE_TYPE_CONTEXT_DESC = 0xd,           
    ZE_STRUCTURE_TYPE_COMMAND_QUEUE_DESC = 0xe,     
    ZE_STRUCTURE_TYPE_COMMAND_LIST_DESC = 0xf,      
    ZE_STRUCTURE_TYPE_EVENT_POOL_DESC = 0x10,       
    ZE_STRUCTURE_TYPE_EVENT_DESC = 0x11,            
    ZE_STRUCTURE_TYPE_FENCE_DESC = 0x12,            
    ZE_STRUCTURE_TYPE_IMAGE_DESC = 0x13,            
    ZE_STRUCTURE_TYPE_IMAGE_PROPERTIES = 0x14,      
    ZE_STRUCTURE_TYPE_DEVICE_MEM_ALLOC_DESC = 0x15, 
    ZE_STRUCTURE_TYPE_HOST_MEM_ALLOC_DESC = 0x16,   
    ZE_STRUCTURE_TYPE_MEMORY_ALLOCATION_PROPERTIES = 0x17,  
    ZE_STRUCTURE_TYPE_EXTERNAL_MEMORY_EXPORT_DESC = 0x18,   
    ZE_STRUCTURE_TYPE_EXTERNAL_MEMORY_IMPORT_FD = 0x19, 
    ZE_STRUCTURE_TYPE_EXTERNAL_MEMORY_EXPORT_FD = 0x1a, 
    ZE_STRUCTURE_TYPE_MODULE_DESC = 0x1b,           
    ZE_STRUCTURE_TYPE_MODULE_PROPERTIES = 0x1c,     
    ZE_STRUCTURE_TYPE_KERNEL_DESC = 0x1d,           
    ZE_STRUCTURE_TYPE_KERNEL_PROPERTIES = 0x1e,     
    ZE_STRUCTURE_TYPE_SAMPLER_DESC = 0x1f,          
    ZE_STRUCTURE_TYPE_PHYSICAL_MEM_DESC = 0x20,     
    ZE_STRUCTURE_TYPE_RAYTRACING_MEM_ALLOC_EXT_DESC = 0x00010001,   
    ZE_STRUCTURE_TYPE_FORCE_UINT32 = 0x7fffffff
} ze_structure_type_t;
typedef struct _ze_command_queue_group_properties_t ze_command_queue_group_properties_t;
typedef struct _ze_device_memory_properties_t ze_device_memory_properties_t;
typedef uint32_t ze_command_queue_group_property_flags_t;
typedef struct _ze_command_queue_group_properties_t
{
    ze_structure_type_t stype;                      
    void* pNext;                                    
    ze_command_queue_group_property_flags_t flags;  
    size_t maxMemoryFillPatternSize;                
    uint32_t numQueues;                             
} ze_command_queue_group_properties_t;
ZE_APIEXPORT ze_result_t ZE_APICALL
zeDeviceGetCommandQueueGroupProperties(
    ze_device_handle_t hDevice,                     
    uint32_t* pCount,                               
    ze_command_queue_group_properties_t* pCommandQueueGroupProperties   
    );
typedef uint32_t ze_device_memory_property_flags_t;
typedef enum _ze_device_memory_property_flag_t
{
    ZE_DEVICE_MEMORY_PROPERTY_FLAG_TBD = ZE_BIT(0), 
    ZE_DEVICE_MEMORY_PROPERTY_FLAG_FORCE_UINT32 = 0x7fffffff
} ze_device_memory_property_flag_t;
typedef struct _ze_device_memory_properties_t
{
    ze_structure_type_t stype;                      
    void* pNext;                                    
    ze_device_memory_property_flags_t flags;        
    uint32_t maxClockRate;                          
    uint32_t maxBusWidth;                           
    uint64_t totalSize;                             
    char name[ZE_MAX_DEVICE_NAME];                  
} ze_device_memory_properties_t;
ZE_APIEXPORT ze_result_t ZE_APICALL
zeDeviceGetMemoryProperties(
    ze_device_handle_t hDevice,                     
    uint32_t* pCount,                               
    ze_device_memory_properties_t* pMemProperties   
    );
typedef enum _ze_memory_access_cap_flag_t
{
    ZE_MEMORY_ACCESS_CAP_FLAG_RW = ZE_BIT(0),       
    ZE_MEMORY_ACCESS_CAP_FLAG_ATOMIC = ZE_BIT(1),   
    ZE_MEMORY_ACCESS_CAP_FLAG_CONCURRENT = ZE_BIT(2),   
    ZE_MEMORY_ACCESS_CAP_FLAG_CONCURRENT_ATOMIC = ZE_BIT(3),
    ZE_MEMORY_ACCESS_CAP_FLAG_FORCE_UINT32 = 0x7fffffff
} ze_memory_access_cap_flag_t;