level_zero-sys/src/ze_api.rs

#[test]
fn bindgen_test_layout__ze_command_queue_group_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_command_queue_group_properties_t>(),
        40usize,
        concat!(
            "Size of: ",
            stringify!(_ze_command_queue_group_properties_t)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_command_queue_group_properties_t>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(_ze_command_queue_group_properties_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_command_queue_group_properties_t>())).stype as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_group_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_command_queue_group_properties_t>())).pNext as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_group_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_command_queue_group_properties_t>())).flags as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_group_properties_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_command_queue_group_properties_t>()))
                .maxMemoryFillPatternSize as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_group_properties_t),
            "::",
            stringify!(maxMemoryFillPatternSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_command_queue_group_properties_t>())).numQueues as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_command_queue_group_properties_t),
            "::",
            stringify!(numQueues)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves command queue group properties of the device."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - Properties are reported for each physical command queue type supported"]
    #[doc = "       by the device."]
    #[doc = "     - Multiple calls to this function will return properties in the same"]
    #[doc = "       order."]
    #[doc = "     - The order in which the properties are returned defines the command"]
    #[doc = "       queue group's ordinal."]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @remarks"]
    #[doc = "   _Analogues_"]
    #[doc = "     - **vkGetPhysicalDeviceQueueFamilyProperties**"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pCount`"]
    pub fn zeDeviceGetCommandQueueGroupProperties(
        hDevice: ze_device_handle_t,
        pCount: *mut u32,
        pCommandQueueGroupProperties: *mut ze_command_queue_group_properties_t,
    ) -> ze_result_t;
}
impl _ze_device_memory_property_flags_t {
    #[doc = "< reserved for future use"]
    pub const ZE_DEVICE_MEMORY_PROPERTY_FLAG_TBD: _ze_device_memory_property_flags_t =
        _ze_device_memory_property_flags_t(1);
}
impl _ze_device_memory_property_flags_t {
    pub const ZE_DEVICE_MEMORY_PROPERTY_FLAG_FORCE_UINT32: _ze_device_memory_property_flags_t =
        _ze_device_memory_property_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_device_memory_property_flags_t> for _ze_device_memory_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_device_memory_property_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_device_memory_property_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_device_memory_property_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_device_memory_property_flags_t> for _ze_device_memory_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_device_memory_property_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_device_memory_property_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_device_memory_property_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported device memory property flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_device_memory_property_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported device memory property flags"]
pub use self::_ze_device_memory_property_flags_t as ze_device_memory_property_flags_t;
#[doc = ""]
#[doc = " @brief Device local memory properties queried using"]
#[doc = "        ::zeDeviceGetMemoryProperties"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _ze_device_memory_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] 0 (none) or a valid combination of"]
    #[doc = "< ::ze_device_memory_property_flags_t"]
    pub flags: ze_device_memory_property_flags_t,
    #[doc = "< [out] Maximum clock rate for device memory."]
    pub maxClockRate: u32,
    #[doc = "< [out] Maximum bus width between device and memory."]
    pub maxBusWidth: u32,
    #[doc = "< [out] Total memory size in bytes that is available to the device."]
    pub totalSize: u64,
    #[doc = "< [out] Memory name"]
    pub name: [::std::os::raw::c_char; 256usize],
}
#[test]
fn bindgen_test_layout__ze_device_memory_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_memory_properties_t>(),
        296usize,
        concat!("Size of: ", stringify!(_ze_device_memory_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_memory_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_device_memory_properties_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_properties_t>())).stype as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_properties_t>())).pNext as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_properties_t>())).flags as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_properties_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_properties_t>())).maxClockRate as *const _
                as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_properties_t),
            "::",
            stringify!(maxClockRate)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_properties_t>())).maxBusWidth as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_properties_t),
            "::",
            stringify!(maxBusWidth)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_properties_t>())).totalSize as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_properties_t),
            "::",
            stringify!(totalSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_properties_t>())).name as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_properties_t),
            "::",
            stringify!(name)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves local memory properties of the device."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - Properties are reported for each physical memory type supported by the"]
    #[doc = "       device."]
    #[doc = "     - Multiple calls to this function will return properties in the same"]
    #[doc = "       order."]
    #[doc = "     - The order in which the properties are returned defines the device's"]
    #[doc = "       local memory ordinal."]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @remarks"]
    #[doc = "   _Analogues_"]
    #[doc = "     - clGetDeviceInfo"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pCount`"]
    pub fn zeDeviceGetMemoryProperties(
        hDevice: ze_device_handle_t,
        pCount: *mut u32,
        pMemProperties: *mut ze_device_memory_properties_t,
    ) -> ze_result_t;
}
impl _ze_memory_access_cap_flags_t {
    #[doc = "< Supports load/store access"]
    pub const ZE_MEMORY_ACCESS_CAP_FLAG_RW: _ze_memory_access_cap_flags_t =
        _ze_memory_access_cap_flags_t(1);
}
impl _ze_memory_access_cap_flags_t {
    #[doc = "< Supports atomic access"]
    pub const ZE_MEMORY_ACCESS_CAP_FLAG_ATOMIC: _ze_memory_access_cap_flags_t =
        _ze_memory_access_cap_flags_t(2);
}
impl _ze_memory_access_cap_flags_t {
    #[doc = "< Supports concurrent access"]
    pub const ZE_MEMORY_ACCESS_CAP_FLAG_CONCURRENT: _ze_memory_access_cap_flags_t =
        _ze_memory_access_cap_flags_t(4);
}
impl _ze_memory_access_cap_flags_t {
    #[doc = "< Supports concurrent atomic access"]
    pub const ZE_MEMORY_ACCESS_CAP_FLAG_CONCURRENT_ATOMIC: _ze_memory_access_cap_flags_t =
        _ze_memory_access_cap_flags_t(8);
}
impl _ze_memory_access_cap_flags_t {
    pub const ZE_MEMORY_ACCESS_CAP_FLAG_FORCE_UINT32: _ze_memory_access_cap_flags_t =
        _ze_memory_access_cap_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_memory_access_cap_flags_t> for _ze_memory_access_cap_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_memory_access_cap_flags_t(self.0 | other.0)
    }
}
